zettelkasten-front/src/App.css
/* General Reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, sans-serif;
}

/* Container for the entire app */
.app-container {
  display: flex;
  height: 100vh;
}

/* Dropdown Styles */
select {
  width: 50%;
  padding: 10px;
  margin-bottom: 20px;
  font-size: 16px;
  cursor: pointer;
  border: 1px solid #ccc;
  border-radius: 5px; /* Rounded corners */
  appearance: none; /* Remove default appearance */
  background-color: #ffffff;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
}

/* Option Styles */
option {
  padding: 10px;
  font-size: 16px;
}

.scroll-cards {

  background-color: #57cc99;
  overflow-y: auto;
  height: 75vh;
}

.card-item {
  color: #22577a;
}
.card-item:hover {
  background-color: #c7f9cc;
}

.main-content {
  display: flex;
  padding-top: 10;
}
.main-content .main-content h2,
.main-content h3 {
  margin-bottom: 20px;
}

.main-content p {
  margin-bottom: 20px;
}

.main-content ul {
  list-style-type: none;
}

.content li {
  border-top: 1px solid #f0f0f0;
  border-bottom: 1px solid #f0f0f0;
}

.main-content button {
  padding: 10px;
  font-size: 16px;
  cursor: pointer;
}

/* Editing Card Styles */
.editing-card {
  display: flex;
  flex-direction: column;
}

.editing-card input,
.editing-card textarea {
  margin-bottom: 20px;
  padding: 10px;
  font-size: 16px;
}

.editing-card-preview {
  border: 1px solid black;
  padding: 10px;
}

/* Sidebar Styles */
.sidebar {
  flex-shrink: 0;
  width: 20%;
  overflow-y: auto;
  height: calc(100vh);
  border-right: 1px solid #ccc;
  background-color: #57cc99;
}

.sidebar input {
  width: 100%;
  font-size: 16px;
}

.sidebar div {
  cursor: pointer;
  padding: 5px;
}

.sidebar-upper {
  display: flex;
  align-items: center;
  padding: 10px 20px;
  background-color: #22577a;
}
.sidebar-upper-username {
  color: white;
  font-size: 16px;
  font-weight: 500;
  padding-left: 10px;
}

.sidebar-links {
}

.sidebar-links li {
}

.sidebar-links a {
  display: flex;
  align-items: center;
  padding: 5px 5px;
  text-decoration: none;
  font-weight: 500;
  border-radius: 8px;
  color: #22577A;
  transition:
    background-color 0.2s ease,
    color 0.2s ease;
}

/* Hover and active states */
.sidebar-links a:hover,
.sidebar-links a.active {
  background-color: #c7f9cc;
}

.sidebar-nav-item {
  position: relative;
  list-style-type: none;
}

.sidebar-nav-link {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px 15px;
  text-decoration: none;
  color: #333; /* Adjust color as needed */
}

.sidebar-nav-badge {
  border-radius: 50%;
  padding: 2px 6px;
  font-size: 0.8em;
  position: absolute;
  right: 10px;
  top: 50%;
  transform: translateY(-50%);
}

.logo {
  width: 50px;
  height: auto;
}


.content {
  flex-grow: 1; /* takes the remaining space */
  height: calc(100vh);
  overflow-y: auto; /* enables scrolling */
  word-wrap: break-word; /* Added: ensures text wrapping */
  overflow-x: hidden; /* Added: prevents horizontal scrolling */
}
.content-display {
  padding: 10px;
}
.top-bar {
  display: flex;
  background-color: white; /* A nice blue shade */
  color: white;
  width: 100%;
  height: 50px;
  top: 0;
  align-items: center; /* Center items vertically */
  justify-content: space-between;
}

.top-bar-left {
  padding-left: 10px;
}

.top-bar-right {
  justify-content: flex-end;
  display: flex;
  align-items: center; /* Center items vertically */
}

.top-bar-index {
  color: white;
  text-decoration: none;
}

.file-item {
  display: flex;
  width: 100%;
  align-items: center; /* Center items vertically */
  justify-content: space-between;
}

.file-item-right {
  justify-content: flex-end;
  display: flex;
  align-items: center; /* Center items vertically */
}

/* Button-like styles */
.btn {
  padding: 10px 20px;
  background-color: #007bff; /* Blue background */
  color: white; /* White text */
  text-decoration: none; /* Removes underline from links */
  border: none; /* Removes border from buttons */
  border-radius: 5px; /* Optional: rounds the corners */
  cursor: pointer; /* Changes cursor to pointer */
  font-size: 16px; /* Sets the font size */
  display: inline-block; /* Allows setting padding and width */
  margin: 0 5px; /* Optional: adds some space around the buttons */
  transition: background-color 0.3s; /* Smooth background color transition on hover */
}

.btn:hover {
  background-color: #0056b3; /* Darker blue on hover */
}

.btn:focus {
  outline: none; /* Removes the outline on focus for buttons */
}

/* Updated CSS for the login form, attempting to match the main app page style */

.login-container {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 20%;
  border: 1px solid lightgrey;
  padding: 30px;
}

.login-title {
  text-align: center;
}

.login-error {
  text-align: center;
  color: red;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown:hover .dropdown-content {
  display: block;
}

/* Add other styles for hover effects, etc */

.input-link-dropdown {
  position: absolute;
  z-index: 100; /* High z-index to ensure it's on top */
  width: 100%; /* Make the dropdown as wide as the input */
  max-height: 200px; /* Maximum height before scrolling */
  overflow-y: auto; /* Scrollable */
  background: white; /* Background color */
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Simple shadow for depth */
  border: 1px solid #ddd; /* Border for the dropdown */
  border-radius: 4px; /* Optional: Rounded corners for the dropdown */
  top: 100%; /* Position right below the input field */
  left: 0; /* Align to the left side of the input field */
}

/* Card Preview Window */

.card-preview-window {
  position: absolute;
  background: white;
  width: 25%;
  height: 25%;
  padding: 10px;
  border: 1px solid #635bff;
  overflow: hidden; /* Hides overflow content */
  text-overflow: ellipsis; /* Optionally, add ellipsis for overflow text */
}
/* registration page */

.registration-container {
  position: absolute;
  left: 50%;
  top: 30%;
  transform: translate(-50%, -50%);
  width: 20%;
  border: 1px solid lightgrey;
  padding: 30px;
}

input[type="text"],
input[type="username"],
input[type="email"],
input[type="password"] {
  width: calc(
    100% - 10px
  ); /* Adjust width as needed, considering padding and border */
  margin-bottom: 20px;
  padding: 10px;
  border: 1px solid #e0e0e0;
  border-radius: 4px;
  box-sizing: border-box;
  font-size: 16px;
  color: #32325d;
}
/* Styling for form headings */
h2 {
  color: #32325d;
  font-size: 18px;
  margin: 20px;
  font-weight: 300;
}
/* Styling for form elements */
label {
  display: block;
  margin-bottom: 10px;
  color: #6b7c93;
  font-size: 14px;
  font-weight: 300;
}
/* Styling for the submit button */
button[type="submit"] {
  width: 100%;
  color: #fff;
  background-color: #635bff;
  border-radius: 4px;
  padding: 12px 16px;
  font-size: 16px;
  cursor: pointer;
  transition: background-color 0.2s ease;
}

.text {
  color: rgb(60, 66, 87);
  font-size: 14px;
  font-weight: 400;
}

.validation-banner {
  padding: 10px;
  background-color: green;
}

.subscription-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 50px;
  background-color: #f7f7f7;
}

h1 {
  color: #333;
  margin-bottom: 30px;
}

.subscription-options {
  display: flex;
  flex-direction: row;
  gap: 15px;
  justify-content: center;
}

.subscription-button {
  background-color: #635bff;
  color: white;
  padding: 20px;
  border: none;
  text-align: center;
  text-decoration: none;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 16px;
  margin: 4px 2px;
  transition-duration: 0.4s;
  cursor: pointer;
  border-radius: 4px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.subscription-button:hover {
  background-color: white;
  color: #635bff;
  border: 1px solid #635bff;
}

.button-text {
  display: flex;
  flex-direction: column;
}

.plan-name {
  font-size: 18px;
  font-weight: bold;
}

.plan-cost {
  font-size: 14px;
  opacity: 0.8;
}

.task-completed {
  text-decoration: line-through;
}

.create-task-window {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.create-task-window-top {
  flex: 0 1 auto; /* Allow the top input to grow based on its content */
}

.create-task-window-bottom {
  display: flex;
  flex: 1 0 auto; /* Allow the bottom section to grow */
  align-items: flex-end; /* Align items at the bottom */
}

.create-task-window-bottom-left {
  flex: 0 1 auto; /* Allow the bottom-left to be as small as its content */
}

.create-task-window-bottom-right {
  flex: 1 1 auto; /* Allow the bottom-right to take up remaining space */
  display: flex;
  justify-content: flex-end; /* Align the button to the right */
  align-items: flex-end; /* Align the button at the bottom */
}

.task-list-item {
  display: flex;
  align-items: center;
  background-color: white;
}

.task-list-item-checkbox {
  margin-right: 10px;
}

.task-list-item-middle-container {
  flex-grow: 1;
}

.task-list-item-title {
}

.task-list-item-details {
}

.task-title {
  cursor: pointer;
}

.task-completed {
  text-decoration: line-through;
}

.task-list-item-title-input {
  width: 100%;
}

.task-list-item-card {
  margin-left: 10px;
}

.card-id {
  font-weight: bold;
  color: blue;
}

.task-due-today {
  font-weight: bold;
  color: green;
}

.task-due-overdue {
  font-weight: bold;
  color: red;
}

.task-date {
  font-size: small;
}

.task-recurring {
  font-size: small;
  color: #007bff;
}
.task-list-item {
  display: flex;
  align-items: center;
}

.task-list-item-menu {
  position: relative;
  margin-left: auto;
}

.menu-button {
  background: none;
  border: none;
  cursor: pointer;
  font-size: 1.5em;
}

.popup-menu {
  position: absolute;
  right: 0;
  top: 100%;
  background: white;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
  z-index: 10;
}

.popup-menu button {
  display: block;
  width: 100%;
  padding: 8px 16px;
  text-align: left;
  background: none;
  border: none;
  cursor: pointer;
}

.popup-menu button:hover {
  background-color: #f0f0f0;
}
.create-task-popup-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.create-task-popup-content {
  background-color: white;
  padding: 20px;
  border-radius: 5px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
  max-width: 500px;
  width: 90%;
}

.task-options-view-menu {
  position: relative;
  margin-left: auto;
}

.task-options-view-menu-content {
  position: absolute;
  right: 0;
  top: 100%;
  background: white;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
  z-index: 10;
  min-width: 200px;  /* Adjust this value to make it wider */
}
.toggle-slider {
  position: relative;
  display: inline-block;
  width: 46px;  /* Reduced from 60px */
  height: 24px; /* Reduced from 34px */
}

.toggle-slider input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  transition: .4s;
  border-radius: 24px; /* Adjusted to match new height */
}

.slider:before {
  position: absolute;
  content: "";
  height: 18px; /* Reduced from 26px */
  width: 18px;  /* Reduced from 26px */
  left: 3px;    /* Adjusted from 4px */
  bottom: 3px;  /* Adjusted from 4px */
  background-color: white;
  transition: .4s;
  border-radius: 50%;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:checked + .slider:before {
  transform: translateX(22px); /* Adjusted from 26px to match new width */
}

